# DroneApplications

./: .gitignore  .gitmodules  CMakeLists.txt  DroneApplications.sln  DroneApplications.vcxproj  DroneApplications.vcxproj.filters
Debug/: vc120.idb
Debug/DroneApp.026E23C1.tlog/: CL.read.1.tlog  CL.write.1.tlog  DroneApplications.lastbuildstate  cl.command.1.tlog
src/: CMakeLists.txt  Controller.h  DroneApplication.cpp  DroneApplication.h  Message.h  SensorManager.h  Task.h
src/code/: Controller.cpp  Controller.h  DroneApplication.cpp  DroneApplication.h  DroneLog.cpp  DroneLog.h  Loggeable.h  Message.h  Sensor.h  SensorManager.cpp  SensorManager.h  Task.cpp  Task.h  Task.inl
src/code/core/: Controller.cpp  Controller.h  DroneApplication.h  DroneLog.h  Loggeable.h  Message.h  Sensor.h  SensorManager.cpp  SensorManager.h  Task.h
src/code/implementations/controllers/: ArdroneController.h  MavrosController.cpp  MavrosController.h  OctoArcasController.cpp  OctoArcasController.h  TestBedController.h
src/code/implementations/sensors/: ImuSensor.h  ImuSimulatorSensor.h  MavrosSensor.cpp  MavrosSensor.h  OpencvCameraSensor.h  OpencvImageFileSensor.h  OpencvSensor.h  OpencvVideoSensor.h
src/code/implementations/tasks/: BlackBoxTask.cpp  BlackBoxTask.h
src/core/: Controller.cpp  Controller.h  SensorManager.h
src/implementations/controllers/: ArdroneController.cpp  ArdroneController.h  MavrosController.cpp  MavrosController.h  OctoArcasController.cpp  OctoArcasController.h
src/implementations/sensors/: ImuSensor.h  MavrosSensor.cpp  MavrosSensor.h  OpencvCameraSensor.h  OpencvImageFileSensor.h  OpencvSensor.h  OpencvVideoSensor.h
test/mavros/src/: CMakeLists.txt
test/mavros/src/code/: main.cpp
tests/: CMakeLists.txt
tests/implementations/mavros/: CMakeLists.txt
tests/implementations/mavros/src/: testMavrosController.cpp  testMavrosSensor.cpp
tests/mavros/: CMakeLists.txt
tests/mavros/src/: CMakeLists.txt
tests/mavros/src/code/: main.cpp  mavros_controller.cpp  mavros_sensor.cpp
